--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,27 +1,29 @@
 name: Generate Snake
 
 on:
-  schedule:               # Runs once every day
-    - cron: "0 0 * * *"
-  workflow_dispatch:      # Allows manual runs too
+  schedule:
+    - cron: "0 0 * * *"   # runs daily at midnight
+  workflow_dispatch:       # allows manual run
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Generate snake animation
-        uses: Platane/snk@v3
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: AmanQureshi0111
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: dist
 
-      - name: Push to GitHub
+      - name: Push snake animation to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
+          keep_history: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
