--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,8 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # runs daily at midnight
-  workflow_dispatch:       # allows manual run
+    - cron: "0 0 * * *"    # Runs every day at midnight
+  workflow_dispatch:        # Allows manual run
 
 jobs:
   build:
@@ -14,16 +14,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate snake animation
-        uses: Platane/snk/svg-only@v3
+        uses: Platane/snk@v3
         with:
           github_user_name: AmanQureshi0111
-          outputs: dist
+          outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Push snake animation to the output branch
+      - name: Push snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
-          keep_history: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
